	* Google Talk mail notifications should now work for people for whom they
	  inexplicably did not.  (Thanks to yukam for determining the reason)
	* New XMPP and Google Talk accounts require SSL by default.
	* Display kicks (and the reasons given) in chat rooms when an occupant is
	  kicked.
	* Fix issues with case-sensitivity of XMPP roster and case-insensitive
	  Purple groups.

	Yahoo!/Yahoo! JAPAN:
	* P2P file transfers.  (Sulabh Mahajan)
	* Sending text messages (address to +<countrycode><phone number>).
	  (Sulabh Mahajan)
	* Addition of MSN buddies to Yahoo accounts by adding them as
	  'msn/buddy@somedomain.com' is now supported.  (Sulabh Mahajan)
	* Further fixes for buddy pictures, aliases etc.
	* Yahoo! and Yahoo! JAPAN are now two separate protocol plugins that share
	  common protocol code.  You can now have the same account on both
	  networks.

	Pidgin:
	* Added -f command line option to tell Pidgin to ignore NetworkManager
	  and assume it has a valid network connection.
	* Allow plugins to specify custom link types to the GtkIMHtml widget.
	* The status message input box at the bottom of the buddy list expands
	  correctly when starting a new line of text.
	* Pressing the Enter key in the message entry box of the New Status
	  dialog and various other dialogs now causes the cursor to move to
	  the next line.
	* Created a unified Buddy Pounce notification window for all pounces
	  where "Pop up a notification" is selected, which avoids having a
	  new dialog box every time a pounce is triggered. (Jorge Villaseñor)
	* The New Account dialog is now broken into three tabs.  Proxy
	  configuration has been moved from the Advanced tab to the new tab.
	* Dragging a buddy onto a chat pops up a chat-invitation dialog.
	  (Carlos Bederian)
	* The nicks of the persons who leave the chatroom are italicized in the
	  chat's conversation history. The nicks are un-italicized when they
	  rejoin.
	* Always set unseen-count and unseen-state on conversations.